--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>期货通 PRO V17</title>
+    <!-- Tailwind CSS (Script for development, strictly typically done via postcss in prod but fine here) -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Icons -->
     <link href="https://cdn.bootcdn.net/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+    <!-- Confetti Lib (Global window.confetti) -->
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
     <style>
       /* Custom Scrollbar */
@@ -28,15 +31,19 @@
   <script type="importmap">
 {
   "imports": {
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
-    "lightweight-charts": "https://aistudiocdn.com/lightweight-charts@^5.0.9",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/"
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
+    "vite": "https://aistudiocdn.com/vite@^7.2.4",
+    "lightweight-charts": "https://aistudiocdn.com/lightweight-charts@^5.0.9"
   }
 }
 </script>
 </head>
   <body>
     <div id="root"></div>
+    <!-- 关键修复：指定 Vite 的入口文件 -->
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
